# Jampy

./: .gitignore  .replit  BotJam.py  COG.md  Makefile  README.md  keep_alive.py  pyproject.toml
.github/workflows/: makefile.yml
src/cogs/: bank.py  cash.py  cog_manage.py  credit.py  events.py  events.pyw  help.py  info.py  inv.py  keep_track.py  kill.py  market.py  med.py  mining.py  money.py  resource.py  shops.py  status.py  steal.py
src/cogs/db/: add_sword.py  blacksmith.json  db.json
src/data/: bank.json  shops.json  util.py
utility/: slash_util.py
