[tool.poetry]
name = "repl_python3_Jampy"
version = "0.1.0"
description = ""
authors = ["Mooping <<>>"]

[tool.poetry.dependencies]
python = "^3.8"
nextcord = {git = "https://github.com/nextcord/nextcord.git"}
typing-extensions = "^4.0.1"
Flask = "^2.0.2"
dta = "^1.3.1"
aiofiles = "^0.8.0"
aiohttp = {extras = ["speedups"], version = "^3.8.1"}
python-dotenv = "^0.19.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
